add images, first three slides and template WIP
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="https://use.typekit.net/cua6unr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
 </head>
@@ -19,12 +20,130 @@
         <![endif]-->
 
     <div class="main-content">
-        <div id="fullpage">
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
+        <div id="header" class="grid-x grid-padding-x grid-padding-y">
+            <div class="cell shrink">
+                <a href="#" class="home">
+                    <img src="./img/fhi-logo-tagline.svg" alt="" class="home-logo">
+                </a>
+            </div>
+            <div class="cell auto grid-y align-center">
+                <div class="grid-x grid-padding-x">
+                    <ul class="cell auto menu simple">
+                        <li>
+                            <a href="#">At a glance</a>
+                        </li>
+                        <li>
+                            <a href="#">Financials</a>
+                        </li>
+                        <li>
+                            <a href="#">Leadership</a>
+                        </li>
+                        <li>
+                            <a href="#">Funders</a>
+                        </li>
+                    </ul>
+                    <div class="cell shrink">
+                        <img src="https://icon.now.sh/share" alt="">
+                    </div>
+                    <div class="cell shrink">
+                        <div class="rightBar-trigger">
+                            Start
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    <div id="fullpage">
+        <!-- <div class="section" data-section="intro">
+                How do we _______? …text in a separate document; Catalyze
+            </div> -->
+        <div class="section" data-section="0">
+            <div class="grid-x align-center inner-frame">
+                <div class="small-12 large-8 cell grid-y align-justify">
+                    <div class="text-center">
+                        <p class="h3"> A catalyst is a spark that transforms an idea into a solution.</p>
+                        <br>
+                        <p class="h3">
+                            In this year's annual report, we share some of the ways we are working with our partners to accelerate innovation and strengthen
+                            our collective capacity to improve lives.
+                        </p>
+                    </div>
+                    <hr class="medium align-self-middle">
+                    <div class="grid-x grid-padding-x align-center p2">
+                        <div class="cell shrink">
+                            <img src="./img/patrick-fine-headshot.jpg" alt="" width="100" height="100">
+                        </div>
+                        <div class="cell shrink grid-y align-center">
+                            <p class="h6 uppercase">A message from our CEO</p>
+                            <p class="h2 mb0">PATRICK FINE</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="drawer-button_container">
+                <img class="drawer-button align-self-middle m2" src="./img/drawer-button.svg" alt="">
+            </div>
+        </div>
+        <div class="section fp-tablecell-auto" data-section="1">
+            <div class="bg object-fit">
+                <img src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
+            </div>
+            <div class="bg-screen"></div>
+
+            <div class="grid-x inner-frame">
+                <div class="small-12 medium-6 cell grid-y align-center">
+                    <div class="cell shrink slide-title">
+                        <h2>A beekeeper uses new skills to build a thriving business</h2>
+                    </div>
+                    <div class="cell shrink">
+                        <hr class="small">
+                    </div>
+                    <div class="cell shrink slide-subtitle">
+                        <h3>Samira Saeed Mouawwad</h3>
+                        <h3>Business-owner, Jordan</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="drawer-button_container">
+                <img class="drawer-button align-self-middle m2" src="./img/drawer-button.svg" alt="">
+                <span class="h6 uppercase">Read Story</span>
+            </div>
+        </div>
+        <div class="section fp-tablecell-auto" data-section="2">
+            <div class="bg object-fit">
+                <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="">
+            </div>
+            <div class="bg-screen"></div>
+            <div class="grid-x inner-frame">
+                <div class="small-12 medium-9 cell grid-y align-center">
+                    <div class="cell shrink slide-title">
+                        <h2>“The focus on small and home-based businesses is giving women the tools they need to become more
+                            powerful and independent, and this leads to their greater contribution to the economy.”</h2>
+                    </div>
+                    <div class="cell shrink">
+                        <hr class="small">
+                    </div>
+                    <div class="cell shrink slide-subtitle">
+                        <h3>Samira Saeed Mouawwad</h3>
+                        <h3>Business-owner, Jordan</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="drawer-button_container">
+                <img class="drawer-button align-self-middle m2" src="./img/drawer-button.svg" alt="">
+                <span class="h6 uppercase">Read Story</span>
+            </div>
+        </div>
+    </div>
+    <div id="rightSideBar">
+        <nav class="toc">
+            <div class="toc-item grix-x grid-padding-x">
+                <div class="cell toc-number">1</div>
+                <div class="cell auto toc-title">A beekeeper uses new skills to build a thriving business</div>
+            </div>
+        </nav>
+    </div>
     </div>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
