--- a/index.html
+++ b/index.html
@@ -77,18 +77,68 @@
                             <span style="opacity: 0; position: absolute;">improve lives?</span>
                         </span>
                     </div>
-                    <div class="catalyst move-next">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 690.8 294.4">
-                            <g data-name="Layer 2">
-                                <g data-name="Slide 1">
-                                    <path d="M0 39C0 16.5 17 0 39.7 0c10.5 0 20 3.4 26.7 10.2l-2.3 2.5a33.5 33.5 0 0 0-24.3-9.3c-20.5 0-36 15.4-36 35.5s15.4 35.6 36 35.6c9.2 0 17.5-2.8 24.3-9.4l2.3 2.4A36.5 36.5 0 0 1 39.7 78 38.4 38.4 0 0 1 0 38.9zM153.3 54.9h-46L96.8 77.4h-4l35.6-77h3.6l35.7 77h-4.1zm-1.4-3.2l-21.6-47-21.6 47zM215.5 3.9h-28.3V.4h60.2V4H219v73.5h-3.6zM327.3 54.9h-46.1l-10.4 22.5h-4l35.6-77h3.6l35.6 77h-4zm-1.5-3.2l-21.5-47-21.7 47zM378.6.4h3.8V74h45v3.4h-48.8zM478 51.1v26.3h-3.7V51.1L443.2.4h4l29 47.1 29-47h4zM598.6 74v3.4h-61.1v-2.6l54.9-71H538V.4h59.4v2.7L542.5 74zM690.8 74v3.4h-52V.4h50.5V4h-46.8v32.7h41.8V40h-41.8v34z"
+                    <div class="catalyst move-next grid-y align-middle align-center">
+                        <div class="cell auto">
+                            <svg id="cat_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 800">
+                                <title>catalyze logo</title>
+                                <circle id="orange_dot" cx="333.42" cy="369.25" r="9.51" style="fill: #f27321" />
+                                <g id="cat_title_white">
+                                    <path d="M294.6,368.72c0-22.33,17-38.94,39.71-38.94,10.45,0,20,3.41,26.73,10.23l-2.31,2.42c-6.82-6.6-15.18-9.24-24.31-9.24-20.57,0-36.08,15.4-36.08,35.53s15.51,35.53,36.08,35.53c9.13,0,17.49-2.75,24.31-9.35l2.31,2.42c-6.71,6.93-16.28,10.34-26.73,10.34C311.65,407.66,294.6,391.05,294.6,368.72Z"
+                                        style="fill: #fff" />
+                                    <path d="M447.94,384.67H401.85l-10.34,22.55h-4.07l35.64-77h3.63l35.64,77h-4.07Zm-1.43-3.19-21.56-47-21.67,47Z" style="fill: #fff"
                                     />
-                                    <path d="M223.6 134.7c1.4-1.4 2.9-3 2.9-5.2a2.8 2.8 0 0 0-3-3 6 6 0 0 0-3.6 1.4v-1.2a6.3 6.3 0 0 1 3.6-1.3c2.5 0 4.3 1.4 4.3 4s-1.7 4.4-2.8 5.5l-3.9 4h7v1.2h-8.6V139zM238.7 125.3c3 0 5.3 2.8 5.3 7.6s-2.3 7.5-5.3 7.5-5.3-2.8-5.3-7.5 2.4-7.6 5.3-7.6zm0 1.2c-2.3 0-4 2.3-4 6.4s1.7 6.4 4 6.4 4-2.3 4-6.4-1.7-6.4-4-6.4zM249 127.1v-1l2.9-.7V140h-1.3v-13zM257.5 126.8v-1.1h9.1v.7c-1.2 1.9-4.9 9-5.7 13.7h-1.5a57 57 0 0 1 5.6-13.3zM279.1 140h-1.4l6-14.3h1.1l6 14.4h-1.4l-1.8-4.2H281zm5-12.3l-2.8 7h5.8zM296.6 125.7l8.7 11.7v-11.7h1.3V140h-1l-8.6-11.8v11.8h-1.3v-14.4zM313.7 125.7l8.8 11.7v-11.7h1.2V140h-1l-8.6-11.8v11.8h-1.3v-14.4zM330 125.7h1.3v7.7c0 4 1.8 5.8 4.6 5.8s4.6-1.8 4.6-5.8v-7.7h1.4v7.7c0 4.8-2.4 7-6 7s-6-2.2-6-7zM347.3 140h-1.4l6-14.3h1l6 14.4h-1.4l-1.8-4.2H349zm5-12.3l-2.9 7h5.8zM365.2 125.7v13.2h6.8v1.2h-8.2v-14.4zM394 140h-1.6l-4-6h-3v6H384v-14.3h4.5c3 0 4.4 2 4.4 4.2a3.9 3.9 0 0 1-3.2 4zm-2.5-10.1a2.8 2.8 0 0 0-3-3h-3.2v6.1h3.1a2.8 2.8 0 0 0 3.1-3.1zM407.2 125.7v1.2h-6.8v5h5.6v1.2h-5.6v5.8h6.8v1.2h-8.1v-14.4zM417.5 125.7a4.3 4.3 0 1 1 0 8.7h-3.2v5.7H413v-14.4zm3 4.3a2.9 2.9 0 0 0-3-3.1h-3.2v6.3h3.2a2.9 2.9 0 0 0 3-3.2zM433.9 125.3a7.6 7.6 0 1 1-7.4 7.6 7.3 7.3 0 0 1 7.4-7.6zm0 1.2c-3.5 0-6 2.6-6 6.4s2.5 6.3 6 6.3 6-2.5 6-6.3-2.6-6.4-6-6.4zM456.8 140h-1.5l-4.1-6h-3v6h-1.4v-14.3h4.5c3.1 0 4.4 2 4.4 4.2a3.9 3.9 0 0 1-3.1 4zm-2.4-10.1a2.8 2.8 0 0 0-3.1-3H448v6.1h3.2a2.8 2.8 0 0 0 3.1-3.1zM460 126.8v-1.1h11.6v1.1h-5.1v13.3H465v-13.3z"
-                                        fill="#333" />
-                                    <path fill="none" stroke="#c44f00" d="M304.3 252.1l42 42M388.3 252.1l-42 42" id="intro-chevron" />
+                                    <path d="M510.09,333.63H481.82v-3.41H542v3.41H513.72v73.59h-3.63Z" style="fill: #fff" />
+                                    <path d="M621.85,384.67H575.76l-10.34,22.55h-4.07l35.64-77h3.63l35.64,77h-4.07Zm-1.43-3.19-21.56-47-21.67,47Z" style="fill: #fff"
+                                    />
+                                    <path d="M673.22,330.22H677v73.59h45.1v3.41H673.22Z" style="fill: #fff" />
+                                    <path d="M772.66,380.93v26.29h-3.74V380.93l-31.13-50.71h4.07l29,47.08,29-47.08h4Z" style="fill: #fff" />
+                                    <path d="M893.22,403.81v3.41H832.06v-2.64L887,333.63H832.61v-3.41H892v2.64l-54.89,70.95Z" style="fill: #fff" />
+                                    <path d="M985.4,403.81v3.41h-52v-77h50.49v3.41H937.11v32.78h41.8v3.41h-41.8v34Z" style="fill: #fff" />
                                 </g>
-                            </g>
-                        </svg>
+                                <g id="cat_title">
+                                    <path d="M294.6,368.72c0-22.33,17-38.94,39.71-38.94,10.45,0,20,3.41,26.73,10.23l-2.31,2.42c-6.82-6.6-15.18-9.24-24.31-9.24-20.57,0-36.08,15.4-36.08,35.53s15.51,35.53,36.08,35.53c9.13,0,17.49-2.75,24.31-9.35l2.31,2.42c-6.71,6.93-16.28,10.34-26.73,10.34C311.65,407.66,294.6,391.05,294.6,368.72Z"
+                                    />
+                                    <path d="M447.94,384.67H401.85l-10.34,22.55h-4.07l35.64-77h3.63l35.64,77h-4.07Zm-1.43-3.19-21.56-47-21.67,47Z" />
+                                    <path d="M510.09,333.63H481.82v-3.41H542v3.41H513.72v73.59h-3.63Z" />
+                                    <path d="M621.85,384.67H575.76l-10.34,22.55h-4.07l35.64-77h3.63l35.64,77h-4.07Zm-1.43-3.19-21.56-47-21.67,47Z" />
+                                    <path d="M673.22,330.22H677v73.59h45.1v3.41H673.22Z" />
+                                    <path d="M772.66,380.93v26.29h-3.74V380.93l-31.13-50.71h4.07l29,47.08,29-47.08h4Z" />
+                                    <path d="M893.22,403.81v3.41H832.06v-2.64L887,333.63H832.61v-3.41H892v2.64l-54.89,70.95Z" />
+                                    <path d="M985.4,403.81v3.41h-52v-77h50.49v3.41H937.11v32.78h41.8v3.41h-41.8v34Z" />
+                                </g>
+                                <g id="cat_subtitle">
+                                    <g>
+                                        <path d="M518.22,464.48c1.36-1.44,2.88-3.07,2.88-5.16a2.75,2.75,0,0,0-3.05-3.05,6,6,0,0,0-3.53,1.4v-1.25a6.33,6.33,0,0,1,3.58-1.32c2.47,0,4.34,1.46,4.34,4.08s-1.78,4.37-2.81,5.45l-3.91,4.05h7v1.18h-8.59V468.8Z"
+                                            style="fill: #333" />
+                                        <path d="M533.31,455.1c3,0,5.28,2.83,5.28,7.56s-2.3,7.56-5.28,7.56-5.28-2.81-5.28-7.56S530.36,455.1,533.31,455.1Zm0,1.15c-2.28,0-4,2.33-4,6.41s1.68,6.41,4,6.41,4-2.31,4-6.41S535.59,456.25,533.31,456.25Z"
+                                            style="fill: #333" />
+                                        <path d="M543.65,456.9v-1l2.81-.7v14.62h-1.27v-13Z" style="fill: #333" />
+                                        <path d="M552.13,456.63v-1.17h9.07v.74c-1.22,1.85-4.9,9-5.71,13.66H554a57.08,57.08,0,0,1,5.62-13.23Z" style="fill: #333"
+                                        />
+                                        <path d="M573.7,469.86h-1.37l6-14.4h1.08l6,14.4h-1.44l-1.73-4.18h-6.74Zm5.07-12.43-2.88,7.08h5.78Z" style="fill: #333" />
+                                        <path d="M591.22,455.46l8.71,11.74V455.46h1.25v14.4h-.91l-8.71-11.74v11.74h-1.25v-14.4Z" style="fill: #333" />
+                                        <path d="M608.33,455.46l8.72,11.74V455.46h1.24v14.4h-.91l-8.71-11.74v11.74h-1.25v-14.4Z" style="fill: #333" />
+                                        <path d="M624.53,455.46h1.32v7.75c0,4,1.85,5.79,4.64,5.79s4.65-1.8,4.65-5.79v-7.75h1.32v7.73c0,4.85-2.4,7-6,7s-6-2.18-6-7Z"
+                                            style="fill: #333" />
+                                        <path d="M641.86,469.86h-1.37l6-14.4h1.08l6,14.4H652l-1.73-4.18h-6.75Zm5.07-12.43-2.88,7.08h5.78Z" style="fill: #333" />
+                                        <path d="M659.79,455.46v13.22h6.84v1.18h-8.16v-14.4Z" style="fill: #333" />
+                                        <path d="M688.59,469.86H687l-4.13-5.95h-3v5.95h-1.32v-14.4H683c3.1,0,4.44,2,4.44,4.22a3.85,3.85,0,0,1-3.17,4.08Zm-2.45-10.18a2.82,2.82,0,0,0-3.12-3.05h-3.14v6.1H683A2.81,2.81,0,0,0,686.14,459.68Z"
+                                            style="fill: #333" />
+                                        <path d="M701.84,455.46v1.17H695v5.07h5.64v1.18H695v5.8h6.84v1.18h-8.16v-14.4Z" style="fill: #333" />
+                                        <path d="M712.06,455.46a4.35,4.35,0,1,1,0,8.69h-3.14v5.71H707.6v-14.4Zm3.12,4.34a2.9,2.9,0,0,0-3.12-3.17h-3.14V463h3.14A2.89,2.89,0,0,0,715.18,459.8Z"
+                                            style="fill: #333" />
+                                        <path d="M728.5,455.1a7.56,7.56,0,1,1-7.37,7.56A7.24,7.24,0,0,1,728.5,455.1Zm0,1.22c-3.48,0-6,2.55-6,6.34s2.52,6.34,6,6.34,6-2.55,6-6.34S731.93,456.32,728.5,456.32Z"
+                                            style="fill: #333" />
+                                        <path d="M751.44,469.86h-1.55l-4.13-5.95h-3v5.95h-1.32v-14.4h4.47c3.09,0,4.44,2,4.44,4.22a3.86,3.86,0,0,1-3.17,4.08ZM749,459.68a2.82,2.82,0,0,0-3.12-3.05h-3.15v6.1h3.15A2.81,2.81,0,0,0,749,459.68Z"
+                                            style="fill: #333" />
+                                        <path d="M754.56,456.63v-1.17h11.6v1.17H761v13.23H759.7V456.63Z" style="fill: #333" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                        <div id="intro-chevron">
+                            <img width="100" src="./img/large-chevron-down.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,11 +147,11 @@
                 <div class="grid-x align-center inner-frame centered">
                     <div class="small-12 large-8 cell grid-y align-justify">
                         <div class="text-center">
-                            <p class="h3"> A catalyst is a spark that transforms an idea into a solution.</p>
+                            <p class="h3">A catalyst is the spark that transforms an idea into a solution.</p>
                             <br>
                             <p class="h3">
-                                In this year's annual report, we share some of the ways we are working with our partners to accelerate innovation and strengthen
-                                our collective capacity to improve lives.
+                                In this year’s annual report, we share how we are working with our partners to unleash new ideas and opportunities and strengthen
+                                our collective capacity to affect change.
                             </p>
                         </div>
                         <hr class="medium align-self-middle">
