--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <hr class="medium align-self-middle">
                         <div class="grid-x grid-padding-x align-center p2">
                             <div class="cell shrink">
-                                <img src="./img/patrick-fine-headshot.jpg" alt="" width="100" height="100">
+                                <img data-src="./img/patrick-fine-headshot.jpg" alt="" width="100" height="100">
                             </div>
                             <div class="cell shrink grid-y align-center">
                                 <p class="h6 uppercase">A message from our CEO</p>
@@ -180,7 +180,7 @@
                                 </p>
                                 <p class="uppercase">Chief Executive Officer, FHI 360</p>
                                 <p>
-                                    <img src="./img/patrick-fine-headshot.jpg" alt="" width="100" height="100" style="float: left;margin-right: 15px;margin-bottom: 10px;"> When a catalyst is added, something special happens. A catalyst is the spark that turns
+                                    <img data-src="./img/patrick-fine-headshot.jpg" alt="" width="100" height="100" style="float: left;margin-right: 15px;margin-bottom: 10px;"> When a catalyst is added, something special happens. A catalyst is the spark that turns
                                     an idea into a solution. It’s the bridge that makes the unthinkable possible.
                                 </p>
 
@@ -238,7 +238,7 @@
             <!-- SECTION 1 -->
             <div class="section fp-tablecell-auto" data-section="1">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
+                    <img data-src="./img/slides/profile-jordan-slide1-original.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -266,7 +266,7 @@
                             <h1 class="drawer-title">A beekeeper uses new skills to build a thriving business</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/slides/profile-jordan-drawer-original.jpg" alt="">
+                                    <img data-src="./img/slides/profile-jordan-drawer-original.jpg" alt="">
                                 </p>
                                 <p>As a young girl in Jordan, Samira Saeed Mouawwad watched her neighbors tend to their bees
                                     and collect their sugary harvest. Over the years, her interest in beekeeping grew. When
@@ -296,7 +296,7 @@
             <!-- SECTION 2 -->
             <div class="section fp-tablecell-auto" data-section="2">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-jordan-slide2-original.jpg" alt="">
+                    <img data-src="/img/slides/profile-jordan-slide2-original.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -324,7 +324,7 @@
             <!-- SECTION 3 -->
             <div class="section fp-tablecell-auto" data-section="3">
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-hptn-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/example-hptn-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -389,7 +389,7 @@
             <!-- SECTION 4 -->
             <div class="section fp-tablecell-auto" data-section="4">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-india-slide1-original.jpg" alt="">
+                    <img data-src="/img/slides/profile-india-slide1-original.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -417,7 +417,7 @@
                             <h1 class="drawer-title">Emerging leaders develop lasting connections</h1>
                             <div class="drawer-content">
                                 <p>
-                                    <img src="./img/slides/profile-india-drawer-original.jpg" alt="">
+                                    <img data-src="/img/slides/profile-india-drawer-original.jpg" alt="">
                                 </p>
                                 <p>Yatin Thakur is a young Indian “serial entrepreneur” with big ambitions. Just 30 years old,
                                     he has already founded Startup India, a collective aimed at fostering entrepreneurship,
@@ -453,7 +453,7 @@
             <!-- SECTION 5 -->
             <div class="section fp-tablecell-auto" data-section="5">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-india-slide2-original.jpg" alt="">
+                    <img data-src="/img/slides/profile-india-slide2-original.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -482,7 +482,7 @@
             <!-- SECTION 6 -->
             <div class="section fp-tablecell-auto" data-section="6">
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-sinoimplant-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/example-sinoimplant-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -556,7 +556,7 @@
             <!-- SECTION 7 -->
             <div class="section fp-tablecell-auto" data-section="7">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-succeed2020-slide1-original.jpg" alt="">
+                    <img data-src="/img/slides/profile-succeed2020-slide1-original.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
@@ -618,7 +618,7 @@
                 <div class="photo-credit-container">
                     <div class="photo-credit-trigger grid-x grid-padding-x align-middle">
                         <span class="cell auto">Photo credit</span>
-                        <img src="./img/icons/down-chevron.svg" alt="">
+                        <img data-src="/img/icons/down-chevron.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -653,7 +653,7 @@
             <!-- SECTION 9 -->
             <div class="section fp-tablecell-auto" data-section="9">
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-tb-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/example-tb-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -733,7 +733,7 @@
             <!-- SECTION 10 -->
             <div class="section fp-tablecell-auto" data-section="10">
                 <div class="bg object-fit">
-                    <img src="./img/slides/profile-tanzania-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/profile-tanzania-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen darker"></div>
                 <div class="grid-x inner-frame">
@@ -830,7 +830,7 @@
             <!-- SECTION 11 -->
             <div class="section fp-tablecell-auto" data-section="11">
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-myanmar-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/example-myanmar-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -928,13 +928,13 @@
             <!-- SECTION 12 -->
             <div class="section fp-tablecell-auto" data-section="12">
                 <div class="bg object-fit">
-                    <img src="./img/slides/university-background.jpg" alt="">
+                    <img data-src="/img/slides/university-background.jpg" alt="">
                 </div>
                 <div class="bg-screen"></div>
                 <div class="grid-x inner-frame">
                     <div class="small-12 medium-6 large-4 cell grid-y align-center">
                         <div class="cell shrink slide-title stagger-in">
-                            <h2>University degree program prepares Afghani students for tomorrow’s jobs</h2>
+                            <h2>University degree program prepares Afghan students for tomorrow’s jobs</h2>
                         </div>
                         <div class="cell shrink stagger-in">
                             <hr class="small">
@@ -953,7 +953,7 @@
                 <div class="leftDrawer" data-toggle="12">
                     <div class="grid-y grid-padding-x grid-padding-y">
                         <section class="cell auto">
-                            <h1 class="drawer-title">University degree program prepares Afghani students for tomorrow’s jobs</h1>
+                            <h1 class="drawer-title">University degree program prepares Afghan students for tomorrow’s jobs</h1>
                             <div class="drawer-content">
                                 <p>Decades-long conflict has stunted economic growth and development in Afghanistan. To rebuild
                                     their country and fully participate in its workforce, Afghans need more opportunities
@@ -1027,7 +1027,7 @@
             <!-- SECTION 13 -->
             <div class="section fp-tablecell-auto" data-section="13">
                 <div class="bg object-fit">
-                    <img src="./img/slides/example-mstar-slide-original.jpg" alt="">
+                    <img data-src="/img/slides/example-mstar-slide-original.jpg" alt="">
                 </div>
                 <div class="bg-screen purple"></div>
                 <div class="grid-x inner-frame">
@@ -1187,7 +1187,7 @@
                 </div>
                 <div data-moveto="14" class="cell auto toc-item grid-x grid-padding-x">
                     <div class="cell shrink toc-number">9</div>
-                    <div class="cell auto toc-title">University degree program prepares Afghani students for tomorrow’s jobs</div>
+                    <div class="cell auto toc-title">University degree program prepares Afghan students for tomorrow’s jobs</div>
                 </div>
                 <div data-moveto="15" class="cell auto toc-item grid-x grid-padding-x">
                     <div class="cell shrink toc-number">10</div>
